--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="shortcut icon" href="/blog.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ahsan's Text Editor</title>
+    <meta 
+      name="decription"
+      content="Text Editor App made by Ahsan ul Haq."
+    />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   </head>
